Fix SVG animations which set rx or ry attributes https://bugs.webkit.org/show_bug.cgi?id=127337

Patch by Peter Molnar <pmolnar.u-szeged@partner.samsung.com> on 2014-01-21
Reviewed by Dirk Schulze.

Source/WebCore:

Test: svg/stroke/animated-non-scaling-rxry.html

Merged from Blink: https://src.chromium.org/viewvc/blink?revision=152376&view=revision

* rendering/svg/RenderSVGRect.cpp:
(WebCore::RenderSVGRect::updateShapeFromElement):
* rendering/svg/SVGPathData.cpp:
(WebCore::updatePathFromRectElement):

LayoutTests:

Merged from Blink: https://src.chromium.org/viewvc/blink?revision=152376&view=revision

* svg/stroke/animated-non-scaling-rxry-expected.html: Added.
* svg/stroke/animated-non-scaling-rxry.html: Added.

Canonical link: https://commits.webkit.org/145351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162438 268f45cc-cd09-0410-ab3c-d52691b4dbfc