Source/WebCore/rendering/svg/RenderSVGRect.cpp
@@ -57,15 +57,15 @@ void RenderSVGRect::updateShapeFromElement()
     m_innerStrokeRect = FloatRect();
     m_outerStrokeRect = FloatRect();
 
+    SVGLengthContext lengthContext(&rectElement());
     // Fallback to RenderSVGShape if rect has rounded corners or a non-scaling stroke.
-    if (rectElement().hasAttribute(SVGNames::rxAttr) || rectElement().hasAttribute(SVGNames::ryAttr) || hasNonScalingStroke()) {
+    if (rectElement().rx().value(lengthContext) > 0 || rectElement().ry().value(lengthContext) > 0 || hasNonScalingStroke()) {
         RenderSVGShape::updateShapeFromElement();
         m_usePathFallback = true;
         return;
-    } else
-        m_usePathFallback = false;
+    }
 
-    SVGLengthContext lengthContext(&rectElement());
+    m_usePathFallback = false;
     FloatSize boundingBoxSize(rectElement().width().value(lengthContext), rectElement().height().value(lengthContext));
     if (boundingBoxSize.isEmpty())
         return;
